--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,11 @@ jobs:
       - name: Checkout the code
         uses: actions/checkout@v2
 
+      - name : Setting up node
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+
       - name : Install the dependencies
         run : npm install
 
