--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Checkout the code
         uses: actions/checkout@v2
 
-      - name : Setting up node
+      - name : Setup the node env
         uses: actions/setup-node@v2
         with:
           node-version: '14'
@@ -42,5 +42,29 @@ jobs:
       - name : Install the dependencies
         run : npm install
 
-      - name : Run the scripts
+      - name : Run wdio test scripts
         run : npm run test
+
+      - name: Get allure history
+        uses: actions/checkout@v2
+        if: always()
+        continue-on-error: true
+        with:
+          ref: main
+          path: main
+
+      - name: Setup allure report
+        uses: simple-elf/allure-report-action@master
+        if: always()
+        with:
+          allure_results: allure-results
+          allure_history: allure-history
+          keep_reports: 20
+
+      - name: Deploy report to Github Pages
+        if: always()
+        uses: peaceiris/actions-gh-pages@v2
+        env:
+          PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PUBLISH_BRANCH: main
+          PUBLISH_DIR: allure-history
