fix: branch names

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,8 +50,8 @@ jobs:
         if: always()
         continue-on-error: true
         with:
-          ref: main
-          path: main
+          ref: gh-pages
+          path: gh-pages
 
       - name: Setup allure report
         uses: simple-elf/allure-report-action@master
@@ -66,5 +66,5 @@ jobs:
         uses: peaceiris/actions-gh-pages@v2
         env:
           PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PUBLISH_BRANCH: main
+          PUBLISH_BRANCH: gh-pages
           PUBLISH_DIR: allure-history
