fix: enforcing ts strict mode [ci skip]

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,6 @@
         "target": "es2019",
         "module": "commonjs",
         "baseUrl": ".",
-        "noImplicitAny": false,
         "noImplicitReturns": true,
         "resolveJsonModule": true,
         "esModuleInterop": true,
@@ -22,8 +21,7 @@
         "outDir": "./dist",
         "pretty": true,
         "noImplicitThis": true,
-        "strictNullChecks": false,
-        "strict": false
+        "strict": true
     },
     "exclude": [
         "./node_modules"
