--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wdio-ts-github-action",
+  "name": "wdio-ts-docker",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -16,12 +16,10 @@
     "@wdio/allure-reporter": "^7.4.2",
     "@wdio/cli": "^7.3.0",
     "@wdio/local-runner": "^7.4.6",
-    "@wdio/logger": "^7.0.0",
     "@wdio/mocha-framework": "^7.4.6",
     "allure-commandline": "^2.13.8",
     "expect-webdriverio": "^2.0.1",
     "ts-node": "^9.1.1",
-    "tsconfig-paths": "^3.9.0",
     "typescript": "^4.2.3",
     "webdriverio": "^7.3.0"
   }
