--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Checkout the code
         uses: actions/checkout@v2
 
-      - name: Build docker images
+      - name: Build docker and run tests
         run: "make ci-up"
 
       - name: Get allure history
