--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,6 +56,8 @@ jobs:
           PUBLISH_BRANCH: gh-pages
           PUBLISH_DIR: allure-history
 
+        # Need to enable IMAP for this step to success
+        # https://support.google.com/mail/answer/7126229?hl=en
       - name: Send CI build status in mail
         if: always()
         uses: dawidd6/action-send-mail@v3
