--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,12 +58,16 @@ jobs:
 
         # Need to enable IMAP for this step to success
         # https://support.google.com/mail/answer/7126229?hl=en
+        # And allow less secure apps
+        # https://myaccount.google.com/lesssecureapps
       - name: Send CI build status in mail
         if: always()
         uses: dawidd6/action-send-mail@v3
         with:
           server_address: smtp.gmail.com
           server_port: 465
+          username: ${{ secrets.EMAIL_USERNAME }}
+          password: ${{ secrets.EMAIL_PASSWORD }}
           subject: Github actions for ${{ github.job }} job of ${{ github.repository }} has ${{ job.status }}
           body: On ${{ github.event_name }} ${{ github.job }} job in workflow ${{ github.workflow }} of ${{ github.repository }} has ${{ job.status }}
           to: madhankumaravelu93@gmail.com
